--- a/JavaScript/_exercicios/_iniciais/exercicioDOM-2-inicio/style.css
+++ b/JavaScript/_exercicios/_iniciais/exercicioDOM-2-inicio/style.css
@@ -2,38 +2,45 @@
 *{
     margin: 0;
     padding: 0;
-    border: none;
+
     box-sizing: border-box;
 }
 
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
 
 h1{
-    text-align: center;
-
     margin: 1em;
 }
 
-main.layout{
+.layout{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 10px;
 }
 
 .thumb{
-    padding: 20px 40px 10px;
+    width: fit-content;
+
+    padding: 10px 40px 30px;
     border: 2px solid #000;
 }
 
 .title{
-    size: 1.2em;
-    line-height: 2em;
+    font-size: 1.2em;
+    line-height: .5em;
 }
 
 .author{
-    size: 1.5em;
-    line-height: .6em;
+    font-size: 2em;
+    line-height: 1.5em;
+}
+
+.read{
+    font-size: 1em;
+    line-height: 2em;
 }
 
