Exercicio Biblioteca: filtros

--- a/JavaScript/_exercicios/biblioteca/biblioteca-V2-filters-delete/css/index-flex.css
+++ b/JavaScript/_exercicios/biblioteca/biblioteca-V2-filters-delete/css/index-flex.css
@@ -10,6 +10,10 @@ body{
     text-align: center;
 }
 
+section nav h1{
+    margin-bottom: 1em;
+}
+
 img {
     max-width: 100%;
 }
@@ -34,7 +38,7 @@ section.grid article{
 
 } */
 
-section.grid {
+section.grid{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -49,7 +53,93 @@ section.grid article{
     border-radius: 8px;
 }
 
-section.grid article > *{
+/* todos os elementos dentro do article à excepção daqueles que sejam button, têm este atributos: */
+section.grid article > *:not(button){
     margin: .8em 0;
 }
 
+nav.filterContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 1em 0 3em;
+}
+
+img.bookcover{
+    cursor: pointer;
+}
+
+.imgContainer img {
+    display: flex;
+
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.5);
+
+    position: fixed;
+
+    top: 0;
+    left: 0;
+    
+    width: 100%;
+    height: 100%;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.imgBig{
+    max-width: 100%;
+    max-height: 100%;
+    
+    object-fit: contain;
+}
+
+button.btn{    
+    font-size: 16px;
+    font-weight: 600;
+    
+    padding: 1em 2em;
+    border: 2px solid transparent;
+    border-radius: 8px;
+}
+
+button.filter{
+    background-color: #ddd;
+}
+
+button.del{
+    color: #fff;
+
+    background-color: #dd3434;
+}
+
+button.btn:hover{
+    cursor: pointer;
+}
+
+button.filter:hover{
+    background-color: #aaa;
+}
+
+button.del:hover{
+    background-color: #ae2828;
+}
+
+button.btn:active{
+    background-color: transparent;
+    border-width: 2px;
+    border-style: solid;
+}
+
+button.filter:active{
+    color: #666;
+
+    border-color: #999;
+}
+
+button.del:active{
+    color: #ae2828;
+
+    border-color: #ae2828;
+}
