Exercicio Biblioteca : filtros, etc

--- a/JavaScript/_exercicios/biblioteca/biblioteca-V2-filters-delete/css/index-flex.css
+++ b/JavaScript/_exercicios/biblioteca/biblioteca-V2-filters-delete/css/index-flex.css
@@ -70,8 +70,8 @@ img.bookcover{
     cursor: pointer;
 }
 
-.imgContainer img {
-    display: flex;
+.imgBig{
+    display: none;
 
     z-index: 2;
     background: rgba(0, 0, 0, 0.5);
