--- a/javascript/_exercicios/biblioteca/biblioteca-V2-filters-delete/css/index-flex.css
+++ b/javascript/_exercicios/biblioteca/biblioteca-V2-filters-delete/css/index-flex.css
@@ -78,10 +78,10 @@ input.searchTxt{
     padding: .5em;
     outline: 1px solid gray;
     border-radius: 8px;
-    margin-left: 1em;
+    margin-left: .5em;
 }
 
-img.bookcover{
+img.bookCover{
     cursor: pointer;
 }
 
@@ -108,6 +108,10 @@ img.bookcover{
     max-height: 100%;
     
     object-fit: contain;
+}
+
+p.alreadyRead{
+    cursor: pointer;
 }
 
 button.btn{    
